# version

./: .envrc.sample  .gitmodules  .travis.yml  README.md  Rakefile  package.json  sample.envrc
R/: README.md  version.R
ash/: README.md
ash/lib/: version
bash/: Makefile  README.md
bash/lib/: version
bmake/: README.md
c/: CMakeLists.txt  DEVELOPMENT.md  Doxyfile  Makefile  README.md  dir_2bdb0d2e7b88f2a1819a54fa6f169d74.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_8a0776572ba2252f65a895457421e228.html  files.html  globals.html  globals_func.html  graph_legend.html  index.html  main_8c.html  main_8c__incl.map  main_8c__incl.md5  version.c
c/lib/: version.c
chicken/: README.md  version.scm
cl/: README.md  version.lisp
clojure/: build.gradle  version.clj
coffeescript/: Gruntfile.js  README.md  package.json  version.coffee  version.html
cpp/: CMakeLists.txt  DEVELOPMENT.md  Doxyfile  Makefile  README.md  clean-cmake.sh  dir_5ddf929c60db2f7c7b1bfa2d8e86daad.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_8a0776572ba2252f65a895457421e228.html  files.html  globals.html  globals_func.html  graph_legend.html  index.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  version.cpp
cpp/lib/: version.cpp
csh/lib/: version
d/: Makefile  version.d
dash/lib/: version
elisp/: README.md  version.el
erlang/: version.erl
fish/: README.md
fish/lib/: version
fortran/: Makefile  README.md  version.f08
gmake/: GNUmakefile  README.md
go/: Makefile  version.go
go/version/: Makefile  README.md  magefile.go  main.go
groovy/: README.md  build.gradle
haskell/: .gitignore  LICENSE.md  Makefile  README.md  Shakefile.hs  Version.hs  version.cabal
haskell/src/: Version.hs
java/: Makefile  README.md  Version.java  build.gradle  pom.xml
js/: Gruntfile.js  package.json  version.js
jvm/: .envrc.sample  README.md  sample.envrc
jvm/clojure/: build.gradle
jvm/groovy/: build.gradle
jvm/java/: build.gradle
jvm/scala/: build.gradle
ksh/lib/: version
lua/: README.md  version.lua
make/: Version.mf
node/: .jshintrc  Gruntfile.js  README.md  package.json  version.js
objc/: .envrc.sample  Makefile  Version.m
perl/: Version.pm  version.pm
php/: version.php
postgresql/: Makefile  version.psql
python/: tasks.py  version.py
ruby/: README.md  Rakefile  version.rb
rust/: Cargo.toml  DEVELOPMENT.md  Makefile  README.md  rick.rs  tinyrick.rs  version.rs
scala/: Makefile  Version.scala  build.gradle
swift/: .gitignore  Makefile  Package.swift  README.md  Version.swift
zsh/: README.md
(+36 files in other folders)
